--- a/TODO
+++ b/TODO
@@ -1,4 +1,20 @@
 TODO:
 
+- reserve more status registers for internal use.
 - (important!) the VM is 16-Bit right now. Patch to 64 Bit, 24 Bit op codes.
 - overflow value is not set into overflow-value-register
+
+TODO op codes:
+
+- define a op code for defining op-codes.
+  Something like this:
+
+    DEF(opc, funcloc)
+
+  where opc is the opcode to define (or redefine). It will be automatically
+  masked for 24 bit.
+  The funcloc is a pointer to a function which is defined somewhere in the
+  binary. This function is read into the VM and stored there. If the op code
+  which was defined is used, the VM executes the stored procedure.
+
+  There should be some status registers reserved for statuses about the call.
