--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 TODO:
 
 - reserve more status registers for internal use.
+- opcodes in a map (opcode -> function), not in a big switch.
 - (important!) the VM is 16-Bit right now. Patch to 64 Bit, 24 Bit op codes.
 - overflow value is not set into overflow-value-register
 
