--- a/TODO
+++ b/TODO
@@ -24,7 +24,18 @@ TODO:
 	"old" parts of the file from memory to keep memuse smart.
 
 12) Implement heap:
-	- opcode for starting heap allocation
-	- opcode for adding space to heap (slot)
-	- opcode for ending heap allocation
-	- heap addressable with code, every slot addressable with opcode
+		- opcodes: 
+			ALLOC(size in byte) -> ptr/addr of first byte in akku or 0x00 on error
+			RESIZE(addr, size in byte)
+			FREE(addr)
+			PUT(addr, register-ptr, value-size in byte)
+			READ(addr, register-ptr, size in byte)
+
+		PUT and READ require a ptr to a register and a size parameter. If the
+		size is more than one register (8 byte), next register will be used to
+		put or read!
+
+		- statuses:
+			- statusflags for all opcodes for errors 
+			- counter for how much register were used to PUT from
+			- counter for how much register were used to READ into 
