--- a/TODO
+++ b/TODO
@@ -44,3 +44,5 @@ TODO:
 22) Interrupts? What about interrupts? We need a jump-to address for a
 	interrupt and a way to register this address for a particular interrupt type
 	such as SIGINT.
+
+26) Add jump opcodes to jump with address from register!
