--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 TODO:
 
 9)	File reader should read the file as linked list, with automatically removing 
-	"old" parts of the file from memory to keep memuse smart.
+	"old" parts of the file from memory to keep memuse smart. 
+	A very tricky algorithm is required here!
 
 14) Create a plugin-system
 	opcodes:
