--- a/TODO
+++ b/TODO
@@ -47,3 +47,10 @@ TODO:
 	such as SIGINT.
 
 26) Add jump opcodes to jump with address from register!
+
+28) Thread save VPU ? Would be so damn great!
+
+29) Rework complete documentation. (Adapt documentation/comments to a
+	documentation tool?)
+
+30) Rework the output of the VPU.
