--- a/TODO
+++ b/TODO
@@ -53,3 +53,5 @@ TODO:
 22) Interrupts? What about interrupts? We need a jump-to address for a
 	interrupt and a way to register this address for a particular interrupt type
 	such as SIGINT.
+
+26) Write a module-library to test the module infrastructure.
