--- a/TODO
+++ b/TODO
@@ -13,3 +13,5 @@ TODO:
 	such as SIGINT.
 
 28) Thread save VPU ? Would be so damn great!
+
+34) work on --fast option, ensure the VPU caches as much as possible.
